unused/mediacms/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediacms
  name: mediacms
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: mediacms
