unused/mediacms/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mediacms
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("mediacms.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: mediacms
          port: 80
